--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -3,10 +3,50 @@
     display: flex;
 
     .left {
-        flex: 0.5;
+        flex: 0.7;
+        overflow: hidden;
+
+        .imgContainer {
+            width: 700px;
+            height: 700px;  
+            align-items: flex-end;
+            display: flex;
+            justify-content: center;
+       
+
+            img {
+                height: 90%;
+            }
+        }
     }
 
     .right {
-        flex: 0.5;
+        flex: 0.3;
+        position: relative;
+
+        .wrapper{
+            width: 100%;
+            height: 100%;
+            padding-left: 50px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            h1{
+                font-size: 60px;
+                margin: 10px;
+
+            }
+
+            h2 {
+                font-size: 35px;
+
+            }
+
+            h3 {
+                font-size: 30px;
+            }
+
+        }
     }
 }
